--- a/CSharp/唐老狮/入门/运算符/条件运算符.md
+++ b/CSharp/唐老狮/入门/运算符/条件运算符.md
@@ -20,6 +20,7 @@ created: 2024-03-21
 	- 特殊类型只能用 `!= ==`来比较
 
 - **空合并赋值运算符**
+	- `??`
 	- 用于判断左侧的变量是否为`null`
 		- 如果为`null`，则将右侧的值赋给左侧的变量
 	- 如果不为`null`，则不进行任何操作
@@ -27,5 +28,11 @@ created: 2024-03-21
 		- 以避免空引用异常
 	- `obj ??= new Object();`
 		- 如果 obj 是 null，那么将其设置为一个新的 Object 实例
+
+- 空值条件运算符
+	- `?.`
+	- `_action?.Invoke()`
+		- 如果 `_action` 不为 null，则调用 `_action.Invoke()` 方法
+		- 如果 `_action` 为 null，则不执行任何操作，直接返回 null
 
 ---
