--- a/CSharp/唐老狮/进阶/委托和事件/委托.md
+++ b/CSharp/唐老狮/进阶/委托和事件/委托.md
@@ -72,7 +72,7 @@ created: 2024-03-22
 
 - 声明
 	- `Myfun f = new Myfun(Fun);` / `委托名 委托变量 = new 委托名(函数名);`
-		- 只穿函数名
+		- 只写函数名
 		- 函数 `Fun` 返回值、参数列表，必须与委托 `Myfun` 相同
 - 调用
 	- `f.Invoke(参数列表);` / `委托变量.Inovke(参数列表)`
@@ -142,7 +142,7 @@ created: 2024-03-22
 
 - 无参无返回值的委托
 - `Action action = 函数名 / new Action(函数名);`
-- `public Action action`
+	- `public Action action`
 ### `Action<T,K,……>`委托
 
 - 最多传入十六个参数，T、K 皆为泛型（参数类型）
