--- a/Unity/唐老狮/Unity基础/3D数学/向量/向量点乘.md
+++ b/Unity/唐老狮/Unity基础/3D数学/向量/向量点乘.md
@@ -9,7 +9,7 @@ created: 2024-03-23
 ---
 # 关联知识点
 
-[[Unity 小知识点#^e8db75|调试画线]]  [[Unity 小知识点#^0124f8|调试射线]]
+[[Unity 知识点#^e8db75|调试画线]]  [[Unity 知识点#^0124f8|调试射线]]
 
 ---
 # 知识点
