--- a/Unity/唐老狮/Unity基础/MonoBehavior中的重要内容/协同程序.md
+++ b/Unity/唐老狮/Unity基础/MonoBehavior中的重要内容/协同程序.md
@@ -127,7 +127,7 @@ created: 2024-03-23
 - 协程只有当组件单独失活时不受影响，其它情况协程会停止
 - 注意
 	- Unity 中的多线程一定记住关闭
-- [[Unity 小知识点#^78096b|协同程序]]
+- [[Unity 知识点#^78096b|协同程序]]
 
 
 ---
