--- a/Unity/唐老狮/Unity基础/物理系统/射线检测.md
+++ b/Unity/唐老狮/Unity基础/物理系统/射线检测.md
@@ -99,7 +99,7 @@ created: 2024-03-23
 	- 参数三
 		- 检测指定层级（不填检测所有层）
 		- 与范围检测相同，需要进行左移
-		-  [[Unity 小知识点#^bc8e6a|层级相关知识点]]
+		-  [[Unity 知识点#^bc8e6a|层级相关知识点]]
 	- 参数四
 		- 是否忽略触发器 
 			- `UseGlobal` - 使用全局设置 `Collide` - 检测触发器  `Ignore` - 忽略触发器 
