--- a/Unity/唐老狮/Unity基础/物理系统/范围检测.md
+++ b/Unity/唐老狮/Unity基础/物理系统/范围检测.md
@@ -58,7 +58,7 @@ created: 2024-03-23
 		- 可以使用  [[循环语句]] 或者 `foreach` [[迭代器]] 遍历
 - `Collider[] colliders = Physics.OverlapBox(Vector3.zero,Vector3.one,Quaternion.AngleAxis(45,Vector3.up),1 << LayerMask.NameToLayer("层级名"),QueryTriggerInteraction.UseGlobal / Collide / Ignore)`
 	- 获取全部的 在`(0,0,0,)`点 创建一个长宽高为 1 的，绕 Z轴 旋转 45度 的 ，只检测 “层级名” 层 的，是否忽略特定碰撞器的 对象并存储在 colliders 数组里
-	- 关于层级检测 [[Unity 小知识点#^bc8e6a]]
+	- 关于层级检测 [[Unity 知识点#^bc8e6a]]
 #### 另一个盒状范围检测 API
 
 - `Physics.overlapBoxNonA11oc()
