--- a/Unity/唐老狮/Unity核心/3D动画相关/动画2D混合.md
+++ b/Unity/唐老狮/Unity核心/3D动画相关/动画2D混合.md
@@ -17,7 +17,7 @@ created: 2024-03-30
 
 - 1D混合是用一个参数控制动画的混合
 	- 之所以叫1D是因为一个参数可以看做是一维线性的
-- 2D混合你可以简单理解是用两个参数控制动画的混合
+- 2D混合可以简单理解是用两个参数控制动画的混合
 	- 之所以叫2D是因为两个参数可以看做是二维平面 x y 轴的感觉
 ## 2D混合的种类
 
