--- a/其他/番剧.md
+++ b/其他/番剧.md
@@ -63,22 +63,31 @@
 - 欢迎来到实力至上的教室
 	- 第一季+第二季
 		- 2023/12/31
+- 花开伊吕波
+	- 不知道什么时候看完的
+- 我独自升级
+	- 第一季2024.4.22
 - 葬送的芙莉莲
-	- 17集 2024/1/7
+	- 2024/4/29
 - 药屋少女
-	- 13集2024/1/8
-- 影之实力者
-- 上低音号3
+	- 2024/5/1
+- 上低音号
+- 路人超能百分百
+	- 2024/3/21
+- 冰菓
+	- 不知道什么时候看完的
 - 拳愿阿修罗
+	- 第一季+第二季
+		- 2024/5/10
 - 迷宫饭
 - 憧憬成为魔法少女
-
-
-第三季2024四月
-
+- 怪兽八号
 - 无职转生2
 - 鬼灭之刃 柱训练篇
 - 碧蓝档案
 - 夜晚的水母不会游泳
 - 实教三
 - RE0
+-  GIRLS BAND CRY
+- 轻音少女
+- 狼与香辛料
