--- a/算法/解题.md
+++ b/算法/解题.md
@@ -1,6 +1,6 @@
 
 - 求n的阶层（C/C++)
-	```
+	```C++
 	long long digui(int n) {
 		if (n == 0 || n == 1) {
 		return 1;
@@ -12,7 +12,7 @@
 	```
 
 - 求e的近似值（C/C++)
-	```
+	```C++
 	double calculateE(double jingzhundu) {
     double e = 1, temp = 1;                            // 初始化e和temp为1
     int count = 1; // 初始化计数器count为1
@@ -32,7 +32,7 @@
 	```
 
 - 求两个整数的最大公约数（C/C++)
-	```
+	```C++
 	int gcd(int a, int b) { 
 	   if (b == 0) {                 // 如果b等于0，说明已经找到了最大公约数
 	      return a;                  // 返回a作为结果
@@ -43,7 +43,7 @@
 	```
 
 - 求两个整数公约数之和（C/C++)
-	```
+	```C++
 	void gongyueshu(int a, int b) {
 	   int sum = 0;
 	   for (int i = 1; i <= a; i++) {
@@ -58,7 +58,7 @@
 	```
 
 - 求Fibonacci数列（C/C++)
-	```
+	```C++
 	int Fibonacci(int n) {
 	    if (n == 0 || n == 1) {
         return n;
@@ -71,7 +71,7 @@
 
 - 求n阶勒让德公式（C/C++)
 	- P(x) = 1 (n = 0)  x (n = 1)  ((2n-1)*x-p_(n-1) (x)-(n-1)*p_(n-2) (x))/n  (n> 1)*
-	```
+	```C++
 	double p(int n,int  x) {
 	    if (n == 0){
 		    return 1;
@@ -90,8 +90,8 @@
 		- 在ASCII码中，字符'0'的值为48，字符'1'的值为49，以此类推
 			- 因此，通过计算字符c与字符'0'的差值，可以将字符c转换为对应的数字
 				- 例如，如果c为字符'3'，则(c - '0')的结果为3。
-  ```
-		    using System;
+  ```C++
+	using System;
 
 	class Program
 	{
@@ -155,8 +155,8 @@
 
 ```
 
-- 辗转相除法
-  ```
+- 辗转相除法（求其最大公约数
+```C#
     int num1, num2, temp, a, b;
     Console.WriteLine("请输入第一个数：");
     num1 = Convert.ToInt32(Console.ReadLine());
@@ -183,25 +183,24 @@
      //输出最小公倍数=俩数相乘÷最大公约数
      Console.WriteLine("输出最小公倍数" + num1 * num2 / a);
     Console.ReadKey();
-  ```
+ ```
 
-- 求最大公约数
-  ```
-  static int GCD(int a, int b) 
-  { 
-	  if (b == 0) 
-	  {
-		   return a;
-	   }
-	    else 
-		   { 
-			   return GCD(b, a % b);
-			 } 
-  }
-	```
+```python
+
+
+def gcd(a, b): 
+	while a != b: 
+		if a > b: 
+			a = a - b 
+		else: 
+			b = b - a 
+	return a
+
+```
+
 
 - 数组元素逆序
-  ```
+  ```C++
   		#include <iostream>
 		using namespace std;
 	
@@ -229,7 +228,7 @@
   ```
 
 - 杨辉三角
-  ```
+  ```C++
   for( int i = 0 ; i < m ; i++ ){  //m为行数
      for( int j = 0; j <= i ; j++ ){
         if( j == 0 || i  == j){
