--- a/唐老师/CShatp 四部曲/CSharp 进阶/委托和事件/匿名函数.md
+++ b/唐老师/CShatp 四部曲/CSharp 进阶/委托和事件/匿名函数.md
@@ -52,7 +52,7 @@ created: 2024-03-22
 ### 参数传递
 
 - `Text t = new Text();` Text 为一个类
-- `t.Dosomething( 函数名/ delegate(){ })` 
+- `t.Dosomething( 函数名/ delegate()){ })` 
 	- `Dosomething(委托类型 委托名)` 为类中一个方法
 		- 数类型为一个委托类型（也可以理解为一种函数格式，只有符合便可）
 - 可以在传入时声明一个匿名函数
