--- a/Buffer/004 番剧/番剧.md
+++ b/Buffer/004 番剧/番剧.md
@@ -39,8 +39,10 @@
 	- 第一季
 		- 2023/11/30
 - 无职转生
-	- 第一季+第二季
+	- 第一季
 		- 2024/1/12
+	- 第二季
+		- 2024/11/2
 - Mygo
 	- 第一季
 		- 2024/1/13
@@ -75,6 +77,8 @@
 	- 第一季2024.4.22
 - 葬送的芙莉莲
 	- 2024/4/29
+- 邻座艾莉同学
+	- 2024/10/29
 - 药屋少女
 	- 2024/5/1
 - 路人超能百分百
@@ -92,7 +96,6 @@
 	- 2024/8/1
 - 怪兽八号
 	- 2024/7/5
-- 无职转生2
 - 鬼灭之刃 
 	- 2024/7/7
 	- 无限城决战
@@ -122,11 +125,10 @@
 - 某班列车去哪里（终末列车）
 - 擅长逃跑的殿下
 - 英雄学院
-- 领座艾莉同学
-	- 2024/10/29
 - 异世界失格
 - 亚托莉 我挚爱的时光
 - 败犬女主太多了
+	- 2024/11/2
 - 魔法少女曾与恶为敌
 - 义妹生活
 - 小市民
@@ -140,3 +142,10 @@
 - 不良人
 - 星游记
 - 大理寺日志
+- 暂停！智序重组
+- 镇魂街
+- 笼中人
+- 非人哉
+- 有兽焉
+- 无聊就完结
+- 刺客伍六七
