--- a/Resources/002 M_Studio/01 勇士传说/50-全部代码参考.md
+++ b/Resources/002 M_Studio/01 勇士传说/50-全部代码参考.md
@@ -41,7 +41,7 @@ created: 2024-09-12
 - ![[50-全部代码参考 DataDefination.cs]]
 - ![[50-全部代码参考 DataManager.cs]]
 - ![[50-全部代码参考 ISaveable.cs]]
-- ![[50-全部代码参考 SavePoint.cs]]\
+- ![[50-全部代码参考 SavePoint.cs]]
 # ScriptableObject
 
 - ![[50-全部代码参考 CharacterEventSO.cs]]
