--- a/Buffer/004 番剧/番剧.md
+++ b/Buffer/004 番剧/番剧.md
@@ -1,5 +1,5 @@
 
-- 咒术回站
+- 咒术回战
 	- 第一季+第二季
 		- 2023/12/31
 - 境界的彼方
@@ -21,6 +21,8 @@
 		- 2023/12/31
 	- 第三季
 		- 2024/1/4
+- 玉子爱情故事
+	- 不知道什么时候看完的
 - 擅长捉弄的高木同学
 	- 第一二三季+剧场版
 		- 2024/2/3
@@ -35,6 +37,8 @@
 		- 2023/12/29
 - 米奇与达利
 	- 2024/1/8
+- 中二病也要谈恋爱
+	- 不知道什么时候看完的
 - 别当欧尼酱了
 	- 第一季
 		- 2023/11/30
@@ -108,6 +112,8 @@
 		- 2024/7/10
 - RE从零开始的异世界生活
 	- 后半段25年2
+- 靠你了！战神系统
+	- 2025/1/25
 - 忍者神威
 	- 2024/7/18
 - 我心中危险的地方
@@ -128,7 +134,6 @@
 		- 不知道什么时候看完的
 	- 第二季
 		- 2024/10/1
-- 进击的巨人
 - 擅长逃跑的殿下
 	- 2024/11/17
 - 奇巧出租车
@@ -159,6 +164,8 @@
 		- 2023
 	- 第二季
 		- 2024/12/14
+- Charlotte
+	- 不知道什么时候看完的
 - 无聊就完结
 	- 2024/12/13
 - 刺客伍六七
@@ -167,14 +174,23 @@
 	- 第一季 2024/12/15
 - 有兽焉
 	- 第四季 （48集）2024/12/18
-- 关于地球的运动
-- 四月是你的谎言
-- 甘城光辉的游乐园
-- 英雄学院
-- 白箱
+- 盒中之海
+	- 2024/10/2
 - Fate/Stay Night UBW
 	- 2021~~？~~
+- 悲喜渔生
+	- 2025/1/3
 - 胆大党
+	- 第一季
+		- 2025/1/7
+- 四月是你的谎言
+	- 2025/1/27
+- 紫罗兰永恒花园
+- 龙与虎
+- 甘城光辉的游乐园
+- 恋爱随意链接
+- 英雄学院
+- 白箱
 - 斩神
 - 剑来
 - 斗罗
@@ -183,14 +199,19 @@
 - 沧元图
 - 不良人
 - 星游记
+	- 2024/12/11
 - 大理寺日志
 - 暂停！智序重组
 	- 2024/12/13 第六集
 - 镇魂街
 - 青之箱
 - 石纪元
-- 盒中之海
-	- 2024/10/2
+- 牧神记
+- 小兵传奇
+- 全职高手
+- 完美世界
+- 神印王座
+
 
 - 2025/1
 	- 药屋2
